GNOME Bugzilla – Bug 743576
Typing an Hebrew character into the global search crashes builder
Last modified: 2015-01-27 16:30:40 UTC
My keyboard layout was accidentally on Hebrew when I tried to use the global search, which lead to this crash:
+ Trace 234597
Makes sense. The full text index can't support non-ascii (which is mostly fine for filenames, in practice). I'll just remove non-ascii characters from the search query. Making a fuzzy index that uses gunichar will really bloat the index, but not out of the question.
Created attachment 295551 [details] [review] git: ignore non-ascii characters when searching fulltext index The fulltext index only supports ascii currently, so drop non-ascii characters before looking things up.
Attachment 295551 [details] pushed as 2fe3612 - git: ignore non-ascii characters when searching fulltext index