git: ignore non-ascii characters when searching fulltext index

The fulltext index only supports ascii currently, so drop non-ascii
characters before looking things up.

https://bugzilla.gnome.org/show_bug.cgi?id=743576